Estilizando e terminando a aba "Projetos" - Quase pronto

--- a/index.html
+++ b/index.html
@@ -64,11 +64,38 @@
     </section>
 
     <!-- Projetos -->
-    <h1 class="titulo projeto">Projetos</h1>
-    
+    <section id="projetos" class="projetos">
+        <h1 class="titulo meusprojetos">Meus Projetos</h1>
+        <div class="projeto__box">
 
+            <div class="projetos__card">
+                <img class="projetos__img" src="assets/workinprogress.jpg" alt="Projeto em desenvolvimento">
+                <div class="box__textoprojeto">
+                    <h4 class="info__projetos">Nome do Projeto</h4>
+                    <p class="paragrafo__projetos">Aqui vai a descrição e as linguagens utilizadas durante o
+                        desenvolvimento do projeto.</p>
+                </div>
+            </div>
+            <div class="projetos__card">
+                <img class="projetos__img" src="assets/workinprogress.jpg" alt="Projeto em desenvolvimento">
+                <div class="box__textoprojeto">
+                    <h4 class="info__projetos">Nome do Projeto</h4>
+                    <p class="paragrafo__projetos">Aqui vai a descrição e as linguagens utilizadas durante o
+                        desenvolvimento do projeto.</p>
+                </div>
+            </div>
+            <div class="projetos__card">
+                <img class="projetos__img" src="assets/workinprogress.jpg" alt="Projeto em desenvolvimento">
+                <div class="box__textoprojeto">
+                    <h4 class="info__projetos">Nome do Projeto</h4>
+                    <p class="paragrafo__projetos">Aqui vai a descrição e as linguagens utilizadas durante o
+                        desenvolvimento do projeto.</p>
+                </div>
+            </div>
+        </div>
+    </section>
 
-        <script src="script.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
