Criação de footer + botao download CV + Estilização e processo de contato

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </div>
 
     <!-- Conteudo 2ª Página -->
-    <div class="sobremim">
+    <div class="sobremim">  
         <h1 class="titulo sobre">Sobre mim</h1>
         <h3 class="conteudo">Tenho 24 anos, moro em Santos/SP e sou estudante<br>de Análise e Desenvolvimento de
             Sistemas.</h3>
@@ -95,6 +95,33 @@
         </div>
     </section>
 
+    <!-- Contato -->
+    <section id="contato" class="contato">
+        <h1 class="titulo contatos">Entre em contato ou mande um feedback</h1>
+        <form action="https://formspree.io/f/xovlgnqa" method="post" class="formulario__contato">
+            <div class="grupo__form">
+                <input type="text" placeholder="Nome" name="name" class="campo__form">
+            </div>
+            <div class="grupo__form">
+                <input type="email" name="email" placeholder="Seu E-mail" class="campo__form">
+            </div>
+            <div class="grupo__form">
+                <textarea name="message" class="campo__form" placeholder="Digite sua mensagem..."></textarea>
+            </div>
+
+            <button type="submit" class="botao__form">Enviar</button>
+        </form>
+    </section>
+    
+    <footer class="footer">
+        <a href="assets/fakecv.pdf" download class="btn-curriculo"><img class="imgdownload" src="assets/Download CV.svg"></a>
+    </footer>
+
+    <h1><br></h1>
+    <h1><br></h1>
+    <h1><br></h1>
+
+    <!-- JS --> 
     <script src="script.js"></script>
 </body>
 
