--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
     <!-- Contato -->
     <section id="contato" class="contato">
-        <h1 class="titulo contatos">Entre em contato ou mande um feedback</h1>
+        <h1 class="titulo contatos">Entre em contato ou envie um feedback</h1>
         <form action="https://formspree.io/f/xovlgnqa" method="post" class="formulario__contato">
             <div class="grupo__form">
                 <input type="text" placeholder="Nome" name="name" class="campo__form">
