--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/html5/html5-original.svg" alt="Logo HTML"
             title="HTML" />
         <img class="icone__logo" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/css3/css3-original.svg"
-            alt="Logo CSS" / title="CSS">
+            alt="Logo CSS" title="CSS">
         <img class="icone__logo"
             src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/javascript/javascript-original.svg"
             alt="Logo JS" title="JavaScript" />
