--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </div>
 
     <!-- Conteudo 2ª Página -->
-    <div class="sobremim">  
+    <div class="sobremim">
         <h1 class="titulo sobre">Sobre mim</h1>
         <h3 class="conteudo">Tenho 24 anos, moro em Santos/SP e sou estudante<br>de Análise e Desenvolvimento de
             Sistemas.</h3>
@@ -112,16 +112,17 @@
             <button type="submit" class="botao__form">Enviar</button>
         </form>
     </section>
-    
+
     <footer class="footer">
-        <a href="assets/fakecv.pdf" download class="btn-curriculo"><img class="imgdownload" src="assets/Download CV.svg"></a>
+        <a href="assets/fakecv.pdf" download class="btn-curriculo"><img class="imgdownload"
+                src="assets/Download CV.svg"></a>
     </footer>
 
     <h1><br></h1>
     <h1><br></h1>
     <h1><br></h1>
 
-    <!-- JS --> 
+    <!-- JS -->
     <script src="script.js"></script>
 </body>
 
