--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </div>
 
     <div class="icones">
-        <a href="https://www.instagram.com/dgl1ma" target="_blank"><img src="assets/logoinstagram.svg"
+        <a href="https://www.instagram.com/dgl1ma" target="_blank"><img src="assets/logoInstagram.svg"
                 alt="Logo Instagram"></a>
         <a href="https://www.linkedin.com/in/douglas-limajobs" target="_blank"><img src="assets/logolinkedin.svg"
                 alt="Logo Linkedin"></a>
