--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
     </section>
 
     <footer class="footer">
-        <a href="assets/fakecv.pdf" download class="btn-curriculo"><img class="imgdownload"
+        <a href="assets/cvdouglas2025.pdf" download class="btn-curriculo"><img class="imgdownload"
                 src="assets/Download CV.svg"></a>
     </footer>
 
